--- a/mi-portafolio/src/app/navbar/navbar.component.html
+++ b/mi-portafolio/src/app/navbar/navbar.component.html
@@ -1,1 +1,42 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img id="logo" src="assets/images/logo.png" alt="logo personal"> | EdwinQtenho
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="d-flex justify-content-end w-100">
+          <ul class="navbar-nav mb-2 mb-lg-0 ml-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#projects">
+                <i class="pi pi-home"></i>
+                Proyectos
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#skills">
+                <i class="pi pi-list"></i>
+                Habilidades
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">
+                <i class="pi pi-id-card"></i>
+                Contacto
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
